# Constrained-Neural-Networks

./: .gitattributes  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_for_replication.txt  run_all.sh
Examples/: expressive_power_figure.py  pendulum.py  run_MD_e3.py  run_all_scripts.py  run_inference.py  run_protein_folding.py  step_size_figure.py  test.py  test_MD_step_size.py  test_MD_step_size2.py  test_MD_step_size3.py  test_constrain_types.py  test_constrain_types_reg.py  test_expressive_power.py  test_npendulum.py  test_npendulum2.py  test_npendulum3.py  test_npendulum_cont.py  test_npendulum_eq_penalty_sweep.py  test_npendulum_eq_simple.py  test_npendulum_final_test.py  test_npendulum_final_test2.py  test_npendulum_final_test_1000.py  test_npendulum_final_test_k50.py  test_npendulum_final_test_with_regulization.py  test_npendulum_high_reg_pen.py  test_npendulum_initial_test.py  test_npendulum_low_reg_pen.py  test_npendulum_penalty_sweep.py  test_npendulum_penalty_sweep_1000.py  test_npendulum_penalty_sweep_k50.py  test_npendulum_table_nt100.py  test_npendulum_table_nt1000.py  test_npendulum_table_nt10000_k50.py  test_pendulum.py  test_protein_folding.py  test_time_step_size.py  test_water.py  test_water_100.py  test_water_1000.py  (+9 more)
config/: constraints.yaml  imagedenoising.yaml  imagedenoising_penalty_search.yaml  imagedenoising_regularization_search.yaml  imagedenoising_tables.yaml  models.yaml  multibodypendulum.yaml  multibodypendulum_optuna.yaml  multibodypendulum_penalty.yaml  multibodypendulum_penalty_sweep.yaml  pendulum.yaml  water.yaml  (+6 more)
(+201 files in other folders)
