[tool.poetry]
name = "Constrained-Neural-Networks"
version = "0.2"
description = "A framework for building constrained neural networks"
authors = ["Tue Boesen <tue.boesen@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
torch = ">=1.5"
matplotlib = ">=3.7.1"
numpy = ">=1.24.2"
e3nn = "^0.5.1"
multibodypendulum = "^0.2.4"
pandas = "^2.2.0"
omegaconf = "^2.3.0"
mlflow = "^2.10.2"
tqdm = "^4.66.2"
hydra-core = "^1.3.2"
torch-geometric = "^2.5.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.2"
pre-commit = ">=3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
